src/app/app.component.scss
.qr-container {
  display: grid;
  grid-template-columns: 50px 1fr; /* Sidebar and content */
  grid-template-rows: 60px 1fr; /* Header and main content */
  min-height: 100vh;

  &__header {
    grid-column: 1 / 3;
    position: fixed;
    width: 100%;
    z-index: 999;
  }

  &__sidebar {
    grid-row: 2;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  &__main {
    grid-row: 2;
    z-index: 900;
    min-height: calc(100dvh - 90px);
    position: relative;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 16vh auto;
    gap: var(--layout-gap);
    overflow-x: hidden;

    .sections-wrapper {
      min-height: calc(100% - 60px);
    }

    &__loading-layer {
      position: absolute;
      inset: 0;
      background-color: var(--gray-0);
      height: 100%;
    }

    .core-tabs-list {
      overflow-x: auto;
      white-space: nowrap;
      scrollbar-width: none;
      -ms-overflow-style: none;
      margin-bottom: 10px;

      &::-webkit-scrollbar {
        display: none;
      }
    }

    .core-content {
      /* stylelint-disable-next-line selector-type-no-unknown */
      &:not(:has(app-component-state)) {
        max-height: fit-content;
      }

      /* stylelint-disable-next-line selector-type-no-unknown */
      &:has(app-component-state) {
        height: calc(100% - 60px);
      }
    }

    router-outlet {
      display: contents;
    }
  }
}

@media screen and (max-width: 768px) {
  .qr-container {
    grid-template-columns: 1fr;
    column-gap: 0;

    &__sidebar {
      display: none;
    }

    &__main {
      margin: 5px;
    }
  }
}

